[package]
  description = "Created with Anchor"
  edition = "2021"
  name = "escrow"
  version = "0.1.0"

[lib]
  crate-type = ["cdylib", "lib"]
  name = "escrow"

[features]
  anchor-debug = []
  cpi = ["no-entrypoint"]
  custom-heap = []
  custom-panic = []
  default = []
  idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
  no-entrypoint = []
  no-idl = []
  no-log-ix-name = []


[dependencies]
  anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
  anchor-spl = "0.32.1"


[lints.rust]
  unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
  ] }
