[package]
  description = "Created with Anchor"
  edition = "2021"
  name = "escrow"
  version = "0.1.0"

[lib]
  crate-type = ["cdylib", "lib"]
  name = "escrow"

[features]
  anchor-debug = []
  cpi = ["no-entrypoint"]
  custom-heap = []
  custom-panic = []
  default = []
  idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
  no-entrypoint = []
  no-idl = []
  no-log-ix-name = []

[dependencies]
  anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
  anchor-spl = "0.32.1"

[lints.rust]
  unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
  ] }

[dev-dependencies]
  litesvm = "0.7.1"
  solana-account = "2.2.1"
  solana-hash = "2.3.0"
  solana-instruction = "2.3.0"
  solana-keypair = "2.2.1"
  solana-kite = "0.2.1"
  solana-pubkey = "2.2.1"
  solana-sha256-hasher = "2.3.0"
  solana-signer = "2.2.1"
  solana-transaction = "2.2.1"
  spl-associated-token-account = "7.0.0"
  spl-token = "8.0.0"
